--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "app.module.js",
   "dependencies": {
-    "angular": "^1.6.6"
+    "angular": "^v1.6.4",
+    "bootstrap": "^v3.3.7",
+    "jquery": "^3.1.0",
+    "angular-ui-bootstrap":"2.5.0"
   },
   "devDependencies": {
     "browser-sync": "^2.18.13",
