--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
     "angular-ui-bootstrap":"2.5.0"
   },
   "devDependencies": {
-    "http-server": "^0.9.0",
-    "browser-sync": "^2.18.13",
-    "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0"
+    "http-server": "^0.9.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
